--- a/InteriorForMe/Supporting/GoogleService-Info.plist
+++ b/InteriorForMe/Supporting/GoogleService-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyAl0Oja4-XNG-DUQtnX0N4JirVHj7P96ks</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>235685101960</string>
 	<key>PLIST_VERSION</key>
